<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/tv_title_signUp"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="#B11D1D"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAllCaps="false"
        android:textColor="#A37125"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/ed_email_signUp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:background="#45A37125"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp" />

    <TextView
        android:id="@+id/tv_password_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/password"
        android:textColor="#A37125"
        android:textSize="34sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_password_signUp"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:autofillHints="password"
            android:background="#39A37125"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_showHidePwd_signUp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_password_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ed_password_signUp"
            app:layout_constraintVertical_bias="0.058"
            app:srcCompat="@drawable/hide_password_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_repassword_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/retypePassword"
        android:textColor="#A37125"
        android:textSize="34sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_repassword_signUp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#45A37125"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_showHideRePwd_signUp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_repassword_signUp"
            app:layout_constraintEnd_toEndOf="@+id/ed_repassword_signUp"
            app:layout_constraintTop_toTopOf="@+id/ed_repassword_signUp"
            app:srcCompat="@drawable/hide_password_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/redirectToSignIn_signUp"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginTop="15dp"
        android:gravity="right|center_vertical"
        android:text="@string/redirectTosignIn"
        android:textColor="#348DDA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_val_signUp"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#DDA264"
            android:text="@string/validate"
            app:iconTint="#2DFFFFFF" />

        <Button
            android:id="@+id/btn_quit_signUp"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#D59756"
            android:text="@string/quit" />
    </LinearLayout>

</LinearLayout>