<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".login">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="#B11D1D"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAllCaps="false"
        android:textColor="#A37125"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/ed_email_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="40dp"
        android:background="#45A37125"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp" />

    <TextView
        android:id="@+id/tv_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/password"
        android:textColor="#A37125"
        android:textSize="34sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayout_pwd_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_password_login"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:autofillHints="password"
            android:background="#39A37125"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_show_hide_pwd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ed_password_login"
            app:layout_constraintTop_toTopOf="@+id/ed_password_login"
            app:layout_constraintVertical_bias="0.058"
            app:srcCompat="@drawable/hide_password_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_val_login"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#DDA264"
            android:text="@string/validate"
            app:iconTint="#2DFFFFFF" />

        <Button
            android:id="@+id/btn_quit_login"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#D59756"
            android:text="@string/quit" />

    </LinearLayout>
</LinearLayout>